--- a/Account.html
+++ b/Account.html
@@ -18,25 +18,31 @@
             color: #333;
         }
         button{
+            font-family: "Times New Roman", Times, serif;
             margin-top: 42px;
             margin-left: 310px;
-            font-family: "Times New Roman", Times, serif;
         }
         input{
+            font-family: "Times New Roman", Times, serif;
             padding: 10px;
             margin-left: 300px;
             margin-bottom: 10px;
             font-size: 32px;
-            font-family: "Times New Roman", Times, serif;
             border: none;
             outline: none;
             width: 900px;
+        }
+        #CurrentLogin{
+            font-family: "Times New Roman", Times, serif;
+            font-size: 24px;
+            margin-left: 310px;
         }
     </style>
 </head>
 <body>
     <header>
         <nav>
+            <a href="Index.html">Home</a>
             <a href="CreatePost.html">Create</a>
             <a href="ViewPost.html">View</a>
             <a href="Account.html">Account</a>
@@ -48,7 +54,15 @@
         <input type = "text" id = "password" placeholder="Password" required>
         <button type = "submit">Login</button>
     </form>
+    <p id = "CurrentLogin"></p>
     <script>
+        function ShowCurrentLogin(){
+            const username = localStorage.getItem('Username');
+            if(username && username.trim() !== ""){
+                const currentLogin = document.getElementById('CurrentLogin');
+                currentLogin.textContent = "You are currently logged in as " + username;
+            }
+        }
         async function CreateUser(){
             event.preventDefault();
             const username = document.getElementById('username').value;
@@ -70,6 +84,7 @@
                     alert('Account created successfully!');
                     localStorage.setItem('Username', username);
                     localStorage.setItem('Password', password);
+                    ShowCurrentLogin();
                 } else {
                     alert('Error: ' + data.error);
                 }
@@ -78,6 +93,7 @@
                 alert('An error occurred while creating your account.');
             }
         }
+        ShowCurrentLogin();
     </script>
 </body>
 </html>
