--- a/ViewPost.html
+++ b/ViewPost.html
@@ -42,6 +42,7 @@
 <body>
     <header>
         <nav>
+            <a href="Index.html">Home</a>
             <a href="CreatePost.html">Create</a>
             <a href="ViewPost.html">View</a>
             <a href="Account.html">Account</a>
