--- a/Post.html
+++ b/Post.html
@@ -36,7 +36,7 @@
 <body>
     <header>
         <nav>
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="CreatePost.html">Create</a>
             <a href="ViewPost.html">View</a>
             <a href="Account.html">Account</a>
