--- a/Account.html
+++ b/Account.html
@@ -42,7 +42,7 @@
 <body>
     <header>
         <nav>
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="CreatePost.html">Create</a>
             <a href="ViewPost.html">View</a>
             <a href="Account.html">Account</a>
