--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>About</title>
     <style>
         header{
-            width: 100%;
-            padding: 10px 0;
+            width: 95%;
+            padding: 20px;
             display: flex;
             justify-content: center;
             font-size: 24px;
         }
         nav a{
-            margin: 0 15px;
+            margin: 20px;
             text-decoration: none;
             color: #333;
         }
-        body{
+        #about{
             margin-left: 310px;
-            width: 900px;
+            width: 66%;
             font-family: "Times New Roman", Times, serif;
         }
         #Title{
@@ -40,7 +40,11 @@
             <a href="Account.html">Account</a>
         </nav>
     </header>
+    <div id = "about">
     <p id = "Title">About AnimeBlog</p>
     <p id = "Body">AnimeBlog is a website for posting and reading literary analyses about anime and manga.</p>
+    <p id = "Body">This site is a work in progress. If you have any suggestions please 
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=example@gmail.com" target="_blank">send me an email.</a></p>
+    </div>
 </body>
 </html>
