--- a/CreatePost.html
+++ b/CreatePost.html
@@ -6,21 +6,21 @@
     <title>Create</title>
     <style>
         header{
-            width: 100%;
-            padding: 10px 0;
+            width: 95%;
+            padding: 20px;
             display: flex;
             justify-content: center;
             font-size: 24px;
         }
         nav a{
-            margin: 0 15px;
+            margin: 20px;
             text-decoration: none;
             color: #333;
         }
         textarea{
             margin-left: 300px;
             width: 900px;
-            height: 115px;
+            height: 116px;
             padding: 10px;
             box-sizing: border-box;
             font-size: 24px;
@@ -35,6 +35,9 @@
             margin-left: 310px;
             font-family: "Times New Roman", Times, serif;
             margin-bottom: 200px;
+            background-color: white;
+            border-radius: 12px;
+            font-size: 16px;
         }
         input{
             padding: 10px;
