--- a/Post.html
+++ b/Post.html
@@ -6,13 +6,13 @@
     <title>Post</title>
     <style>
         nav a{
-            margin: 0 15px;
+            margin: 20px;
             text-decoration: none;
             color: #333;
         }
         header{
-            width: 100%;
-            padding: 10px 0;
+            width: 95%;
+            padding: 20px;
             display: flex;
             justify-content: center;
             font-size: 24px;
