--- a/ViewPost.html
+++ b/ViewPost.html
@@ -6,14 +6,14 @@
     <title>Post List</title>
     <style>
         header{
-            width: 100%;
-            padding: 10px 0;
+            width: 95%;
+            padding: 20px;
             display: flex;
             justify-content: center;
             font-size: 24px;
         }
         nav a{
-            margin: 0 15px;
+            margin: 20px;
             text-decoration: none;
             color: #333;
         }
@@ -48,6 +48,18 @@
             <a href="Account.html">Account</a>
         </nav>
     </header>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9464043514052770"
+    crossorigin="anonymous"></script>
+    <ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-9464043514052770"
+    data-adtest="on"
+    data-ad-slot="6431223854"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <div id="postList"></div>
     <script>
         async function fetchPosts() {
