--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p id = "Title">About AnimeBlog</p>
     <p id = "Body">AnimeBlog is a website for posting and reading literary analyses about anime and manga.</p>
     <p id = "Body">This site is a work in progress. If you have any suggestions please 
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=example@gmail.com" target="_blank">send me an email.</a></p>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contactanimeblog@gmail.com" target="_blank">send me an email.</a></p>
     </div>
 </body>
 </html>
