--- a/ViewPost.html
+++ b/ViewPost.html
@@ -17,25 +17,45 @@
             text-decoration: none;
             color: #333;
         }
-        .post-item {
+        .post-item{
             margin-top: 50px;
-            margin-left: 300px;
+            margin-left: 310px;
             width: 900px;
             font-family: "Times New Roman", Times, serif;
             margin-bottom: 20px;
             cursor: pointer;
             padding-bottom: 10px;
         }
-        .post-title {
+        .post-title{
             font-size: 32px;
         }
-        .post-author-date {
+        .post-author-date{
             font-size: 24px;
             color: #666;
             margin-top: 5px;
         }
-        .post-item:hover {
+        .post-item:hover{
             background-color: #f0f0f0;
+        }
+        input{
+            margin-left: 310px;
+            border: none;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 24px;
+            width: 900px;
+        }
+        body, html {
+            margin: 0;
+            padding: 0;
+        }
+        .footer {
+            background-color: #222; 
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
         }
     </style>
 </head>
@@ -48,27 +68,25 @@
             <a href="Account.html">Account</a>
         </nav>
     </header>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9464043514052770"
-    crossorigin="anonymous"></script>
-    <ins class="adsbygoogle"
-    style="display:block"
-    data-ad-client="ca-pub-9464043514052770"
-    data-adtest="on"
-    data-ad-slot="6431223854"
-    data-ad-format="auto"
-    data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <div style = "margin: 100px;"></div>
+    <input type="text" id="searchBar" placeholder="Search posts..." oninput="filterPosts()">
     <div id="postList"></div>
+    <div style = "margin: 100px;"></div>
+    <footer class="footer">
+        &copy; 2024 AnimeBlog. All rights reserved.
+    </footer>
     <script>
         async function fetchPosts() {
             const response = await fetch('https://tom4znmjdf.execute-api.us-west-1.amazonaws.com/GetPostList');
             const posts = await response.json();
             const postList = document.getElementById('postList');
+            postList.innerHTML = ''; 
             posts.forEach(post => {
                 const postItem = document.createElement('div');
                 postItem.className = 'post-item';
+                postItem.dataset.title = post.Title.toLowerCase();
+                postItem.dataset.author = post.Author.toLowerCase();
+                postItem.dataset.date = post.Date.toLowerCase();
                 const postTitle = document.createElement('div');
                 postTitle.className = 'post-title';
                 postTitle.textContent = post.Title;
@@ -79,8 +97,22 @@
                 postItem.appendChild(postInfo);
                 postItem.onclick = () => {
                     window.location.href = `Post.html?title=${encodeURIComponent(post.Title)}`;
-                };             
+                };
                 postList.appendChild(postItem);
+            });
+        }
+        function filterPosts() {
+            const searchTerm = document.getElementById('searchBar').value.toLowerCase();
+            const posts = document.querySelectorAll('.post-item');
+            posts.forEach(post => {
+                const title = post.dataset.title;
+                const author = post.dataset.author;
+                const date = post.dataset.date;
+                if (title.includes(searchTerm) || author.includes(searchTerm) || date.includes(searchTerm)) {
+                    post.style.display = '';
+                } else {
+                    post.style.display = 'none';
+                }
             });
         }
         fetchPosts();
