--- a/CreatePost.html
+++ b/CreatePost.html
@@ -12,10 +12,19 @@
             justify-content: center;
             font-size: 24px;
         }
-        nav a{
-            margin: 20px;
+        nav a {
+            margin: 30px;
             text-decoration: none;
-            color: #333;
+            color: #000000;
+        }
+        nav a span{
+            position: relative;
+            top: -1px;
+        }
+        img {
+            height: 20px; 
+            cursor: pointer; 
+            margin-right: 10px;
         }
         textarea{
             margin-left: 300px;
@@ -38,7 +47,7 @@
             margin-left: 310px;
             font-family: "Times New Roman", Times, serif;
             background-color: white;
-            border-radius: 12px;
+            border-radius: 10px;
             font-size: 16px;
             border-width: 1px;
         }
@@ -62,7 +71,7 @@
             padding: 0;
         }
         .footer {
-            background-color: #222; 
+            background-color: #000000; 
             color: #fff;
             text-align: center;
             padding: 20px;
@@ -72,18 +81,18 @@
         }
         #error{
             font-family: "Times New Roman", Times, serif;
-            color: red;
             margin-left: 310px;
+            font-size: 24px;
         }
     </style>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="CreatePost.html">Create</a>
-            <a href="ViewPost.html">View</a>
-            <a href="Account.html">Account</a>
+            <a href="index.html"><img src="Home.png" loading="lazy"><span>Home</span></a>
+            <a href="CreatePost.html"><img src="Create.png" loading="lazy"><span>Create</span></a>
+            <a href="ViewPost.html"><img src = "View.png" loading="lazy"><span>View</span></a>
+            <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
     <div style = "margin: 100px;"></div>
@@ -120,12 +129,12 @@
             button.disabled = true;
             const title = document.getElementById('title').value;
             if (title.trim().split(/\s+/).length < 5) {
-                errortext.textContent = 'The body title be at least 5 words long.';
+                errortext.textContent = 'The title must be at least 5 words long.';
                 return;
             }
             const body = document.getElementById('body').value;
-            if (body.trim().split(/\s+/).length < 1000) {
-                errortext.textContent = 'The body must be at least 1000 words long.';
+            if (body.trim().split(/\s+/).length < 500) {
+                errortext.textContent = 'The body must be at least 500 words long.';
                 return;
             }
             const unformatteddate = new Date();
