--- a/Post.html
+++ b/Post.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post</title>
     <style>
-        nav a{
-            margin: 20px;
+        nav a {
+            margin: 30px;
             text-decoration: none;
-            color: #333;
+            color: #000000;
+        }
+        nav a span{
+            position: relative;
+            top: -1px;
+        }
+        img {
+            height: 20px; 
+            cursor: pointer; 
+            margin-right: 10px;
         }
         header{
             width: 95%;
@@ -27,7 +36,7 @@
             padding: 0;
         }
         .footer {
-            background-color: #222; 
+            background-color: #000000; 
             color: #fff;
             text-align: center;
             padding: 20px;
@@ -50,10 +59,10 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="CreatePost.html">Create</a>
-            <a href="ViewPost.html">View</a>
-            <a href="Account.html">Account</a>
+            <a href="index.html"><img src="Home.png" loading="lazy"><span>Home</span></a>
+            <a href="CreatePost.html"><img src="Create.png" loading="lazy"><span>Create</span></a>
+            <a href="ViewPost.html"><img src = "View.png" loading="lazy"><span>View</span></a>
+            <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
     <div style = "margin: 100px;"></div>
