--- a/ViewPost.html
+++ b/ViewPost.html
@@ -12,10 +12,19 @@
             justify-content: center;
             font-size: 24px;
         }
-        nav a{
-            margin: 20px;
+        nav a {
+            margin: 30px;
             text-decoration: none;
-            color: #333;
+            color: #000000;
+        }
+        nav a span{
+            position: relative;
+            top: -1px;
+        }
+        img {
+            height: 20px; 
+            cursor: pointer; 
+            margin-right: 10px;
         }
         .post-item{
             margin-top: 50px;
@@ -38,8 +47,8 @@
             background-color: #f0f0f0;
         }
         input{
-            margin-left: 310px;
             border: none;
+            outline: none;
             font-family: "Times New Roman", Times, serif;
             font-size: 24px;
             width: 900px;
@@ -49,7 +58,7 @@
             padding: 0;
         }
         .footer {
-            background-color: #222; 
+            background-color: #000000; 
             color: #fff;
             text-align: center;
             padding: 20px;
@@ -57,19 +66,29 @@
             width: 100%;
             bottom: 0;
         }
+        .search-container{
+            margin-left: 310px;
+        }
+        .search-container img{
+            position: relative;
+            top: 3px;
+        }
     </style>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="CreatePost.html">Create</a>
-            <a href="ViewPost.html">View</a>
-            <a href="Account.html">Account</a>
+            <a href="index.html"><img src="Home.png" loading="lazy"><span>Home</span></a>
+            <a href="CreatePost.html"><img src="Create.png" loading="lazy"><span>Create</span></a>
+            <a href="ViewPost.html"><img src = "View.png" loading="lazy"><span>View</span></a>
+            <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
     <div style = "margin: 100px;"></div>
-    <input type="text" id="searchBar" placeholder="Search posts..." oninput="filterPosts()">
+    <div class="search-container">
+        <img src="search.png" loading = 'lazy'>
+        <input type="text" id="searchBar" placeholder="Search posts..." oninput="filterPosts()">
+    </div>
     <div id="postList"></div>
     <div style = "margin: 100px;"></div>
     <footer class="footer">
