--- a/index.html
+++ b/index.html
@@ -16,10 +16,19 @@
             justify-content: center;
             font-size: 24px;
         }
-        nav a{
-            margin: 20px;
+        nav a {
+            margin: 30px;
             text-decoration: none;
-            color: #333;
+            color: #000000;
+        }
+        nav a span{
+            position: relative;
+            top: -1px;
+        }
+        img {
+            height: 20px; 
+            cursor: pointer; 
+            margin-right: 10px;
         }
         #about{
             margin-left: 310px;
@@ -34,7 +43,7 @@
             font-size: 24px;
         }
         .footer {
-            background-color: #222; 
+            background-color: #000000; 
             color: #fff;
             text-align: center;
             padding: 20px;
@@ -47,16 +56,16 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="CreatePost.html">Create</a>
-            <a href="ViewPost.html">View</a>
-            <a href="Account.html">Account</a>
+            <a href="index.html"><img src="Home.png" loading="lazy"><span>Home</span></a>
+            <a href="CreatePost.html"><img src="Create.png" loading="lazy"><span>Create</span></a>
+            <a href="ViewPost.html"><img src = "View.png" loading="lazy"><span>View</span></a>
+            <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
     <div id = "about">
     <p id = "Title">About AnimeBlog</p>
     <p id = "Body">AnimeBlog is a website for posting and reading literary analyses about anime and manga.
-        This site is a work in progress. If you have any suggestions please 
+        This site is a work in progress. If you have any suggestions or come across any bugs please 
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contactanimeblog@gmail.com" target="_blank">send me an email.</a></p>
     </div>
     <footer class="footer">
