--- a/Account.html
+++ b/Account.html
@@ -19,11 +19,12 @@
             bottom: 0;
         }
         header{
-            width: 95%;
+            width: 97.3%;
             padding: 20px;
             display: flex;
             justify-content: center;
             font-size: 24px;
+            border-bottom: 1px solid rgba(132, 132, 132, 0.5);
         }
         nav a {
             margin: 30px;
@@ -34,7 +35,7 @@
             position: relative;
             top: -1px;
         }
-        img {
+        nav img {
             height: 20px; 
             cursor: pointer; 
             margin-right: 10px;
@@ -74,25 +75,46 @@
             margin-left: 310px;
             font-size: 24px;
         }
-        .post-item{
+        .post-item {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between; 
+            align-items: flex-start;
             margin-top: 50px;
             margin-left: 310px;
             width: 900px;
             font-family: "Times New Roman", Times, serif;
             margin-bottom: 20px;
-            cursor: pointer;
             padding-bottom: 10px;
+            position: relative;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-        .post-title{
+        .post-title {
             font-size: 32px;
+            flex-basis: 70%; 
         }
-        .post-author-date{
+        .post-author-date {
             font-size: 24px;
             color: #666;
-            margin-top: 5px;
+            margin-top: 10px;
+            flex-basis: 70%;
+        }
+        .post-button {
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px; 
+            margin-left: 850px;
+            margin-top: 17px;
         }
         .post-item:hover{
             background-color: #f0f0f0;
+        }
+        img{
+            height: 40px; 
+            cursor: pointer; 
         }
     </style>
 </head>
@@ -186,7 +208,7 @@
             postText.textContent = 'Your Posts:'; 
             const username = localStorage.getItem('Username');
             const password = localStorage.getItem('Password');
-            const payload2 = { 
+            const payload = { 
                 Username: username,
                 Password: password
             };
@@ -196,7 +218,7 @@
                     headers: {
                         'content-type': 'application/json'
                     },
-                    body: JSON.stringify(payload2)
+                    body: JSON.stringify(payload)
                 });
                 if (!response.ok) {
                     const errorData = await response.json();
@@ -219,6 +241,13 @@
                     postInfo.className = 'post-author-date';
                     postInfo.textContent = `${post.Author} ${post.Date}`;
                     postItem.appendChild(postTitle);
+                    const exampleButton = document.createElement('button');
+                    const exampleImage = document.createElement('img');
+                    exampleImage.src = 'Delete.png' 
+                    exampleButton.onclick = () => deletePost(post.Title);
+                    exampleButton.className = 'post-button';
+                    exampleButton.appendChild(exampleImage);
+                    postItem.appendChild(exampleButton);
                     postItem.appendChild(postInfo);
                     postItem.onclick = () => {
                         window.location.href = `Post.html?title=${encodeURIComponent(post.Title)}`;
@@ -228,6 +257,35 @@
             } catch (error) {
                 console.error('Error:', error);
                 errortext.textContent = "There was an error getting your posts."
+            }
+        }
+        async function deletePost(title){
+            event.stopPropagation();
+            const username = localStorage.getItem('Username');
+            const password = localStorage.getItem('Password');
+            const payload = { 
+                Title: title,
+                Username: username,
+                Password: password
+            };
+            try {
+                const response = await fetch('https://tom4znmjdf.execute-api.us-west-1.amazonaws.com/DeletePost', {
+                    method: 'POST',
+                    headers: {
+                        'content-type': 'application/json'
+                    },
+                    body: JSON.stringify(payload)
+                });
+                const data = await response.json();
+                if (response.ok) {
+                    errortext.textContent = ''
+                    fetchPosts();
+                } else {
+                    errortext.textContent = data.error
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                errortext.textContent = 'An error occurred while deleting your post.';
             }
         }
         ShowCurrentLogin();
