--- a/Post.html
+++ b/Post.html
@@ -20,11 +20,12 @@
             margin-right: 10px;
         }
         header{
-            width: 95%;
+            width: 97.3%;
             padding: 20px;
             display: flex;
             justify-content: center;
             font-size: 24px;
+            border-bottom: 1px solid rgba(132, 132, 132, 0.5);
         }
         p{
             font-family: "Times New Roman", Times, serif;
