--- a/ViewPost.html
+++ b/ViewPost.html
@@ -6,11 +6,12 @@
     <title>Post List</title>
     <style>
         header{
-            width: 95%;
+            width: 97.3%;
             padding: 20px;
             display: flex;
             justify-content: center;
             font-size: 24px;
+            border-bottom: 1px solid rgba(132, 132, 132, 0.5);
         }
         nav a {
             margin: 30px;
@@ -34,6 +35,8 @@
             margin-bottom: 20px;
             cursor: pointer;
             padding-bottom: 10px;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         .post-title{
             font-size: 32px;
@@ -46,12 +49,14 @@
         .post-item:hover{
             background-color: #f0f0f0;
         }
-        input{
+        input {
             border: none;
-            outline: none;
+            outline: none; 
             font-family: "Times New Roman", Times, serif;
             font-size: 24px;
             width: 900px;
+            border-bottom: 1px solid rgba(132, 132, 132, 0.5);
+            padding: 10px; 
         }
         body, html {
             margin: 0;
