--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
             padding: 0;
         }
         header{
-            width: 95%;
+            width: 97.3%;
             padding: 20px;
             display: flex;
             justify-content: center;
             font-size: 24px;
+            border-bottom: 1px solid rgba(132, 132, 132, 0.5);
         }
         nav a {
             margin: 30px;
