--- a/ViewPost.html
+++ b/ViewPost.html
@@ -91,7 +91,7 @@
     </header>
     <div style = "margin: 100px;"></div>
     <div class="search-container">
-        <img src="search.png" loading = 'lazy'>
+        <img src="Search.png" loading = "lazy">
         <input type="text" id="searchBar" placeholder="Search posts..." oninput="filterPosts()">
     </div>
     <div id="postList"></div>
