--- a/index.html
+++ b/index.html
@@ -33,24 +33,21 @@
         }
         #about{
             margin-left: 310px;
-            width: 66%;
+            width: 60%;
             font-family: "Times New Roman", Times, serif;
         }
         #Title{
-            margin-top: 100px;
+            margin-top: 50px;
             font-size: 32px;
         }
         #Body{
             font-size: 24px;
         }
-        .footer {
-            background-color: #000000; 
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
+        #howto {
+            margin-top: 20px;
+            width: 900px;
+            height: 450px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
@@ -63,14 +60,27 @@
             <a href="Account.html"><img src = "Account.png" loading="lazy"><span>Account</span></a>
         </nav>
     </header>
+    <div style = "margin: 110px;"></div>
     <div id = "about">
     <p id = "Title">About AnimeBlog</p>
     <p id = "Body">AnimeBlog is a website for posting and reading literary analyses about anime and manga.
         This site is a work in progress. If you have any suggestions or come across any bugs please 
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contactanimeblog@gmail.com" target="_blank">send me an email.</a></p>
+    <p id = "Title">How to use AnimeBlog</p>
+    <img id = "howto" src="HowTo1.png">
+    <p id = "Body">By clicking the Account tab, you can either make a new account by entering an unregistered username and making a password
+        or log in to an existing one by entering a registered username and it's associated password.</p>
+    <img id = "howto" src="HowTo2.png">
+    <p id = "Body">By clicking the Create tab once the Account tab shows you have logged in, you can make a post by typing out a title and a body.
+        Once the post is finished, you'll automatically navigate tab where you can view your post by clicking the item with its information as well 
+        as posts others have made. You can also delete posts you have made back in the Account tab by pressing the trash button.</p>
+    <img id = "howto" src="HowTo3.png">
+    <p id = "Body">While viewing a post, you can either download it as a multi-page PDF by clicking the download button or read it online.
+        You can also generate a MLA citation by clicking the cite paper button.</p>
+    <p id = "Title">What to Post</p>
+    <p id = "Body">Only post formal literary analyses on anime, manga, lns or vns. Don't post plagiarized or unoriginal content. 
+        Anything posted in violation of these rules is subject to deletion at our discretion.</p>
     </div>
-    <footer class="footer">
-        &copy; 2024 AnimeBlog. All rights reserved.
-    </footer>
+    <div style = "margin: 100px;"></div>
 </body>
 </html>
